[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aioprometheus>=23.12.0",
    "alembic>=1.18.4",
    "bandit>=1.9.4",
    "celery>=5.6.3",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "gitpython>=3.1.50",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "psycopg[binary]>=3.3.4",
    "pybreaker>=1.4.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pygithub>=2.9.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "python-multipart>=0.0.28",
    "python-ulid>=3.1.0",
    "radon>=6.0.1",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "semgrep>=1.162.0",
    "sentence-transformers>=5.4.1",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "user-agents>=2.2.0",
    "uuid6>=2025.0.1",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
